fix(Comment): Fixed comment not beeing linked to Ticket
