# src/tickets/comments/dto/comment.entity.ts
@@ -1,5 +1,7 @@
 import { Entity, PrimaryGeneratedColumn, Column, ManyToOne } from "typeorm";
 import { User } from "../../users/dto/user.entity";
+import { Ticket } from "src/tickets/dto/ticket.entity";
+import { TicketsService } from "src/tickets/tickets.service";
 
 @Entity()
 export class Comment {
@@ -11,4 +13,7 @@ export class Comment {
 
   @ManyToOne(type => User, user => user.comments)
   author: User;
+
+  @ManyToOne(type => Ticket, ticket => ticket.comments)
+  ticket: Ticket;
 }
